Introduced by "Windows: Fix truncation in QFSFileEnginePrivate::nativeWrite()" 0696566b1e19c8178e00c0d14f185935e17d9e8b https://codereview.qt-project.org/#/c/165727/
Qt 5.6.2 (x86_64-little_endian-llp64 shared (dynamic) debug build; by MSVC 2015) writing 38797312 returns 33554432 File size: 33554432
Manifests by windeployqt not functioning for MinGW/Debug builds (Unable to write file).
- relates to
-
QTBUG-54870 QFSFileEngine (Win) not able to write data in some cases
-
- Closed
-